--- a/z-ml-overlay-meizu.battery/res/values-in/arrays.xml
+++ b/z-ml-overlay-meizu.battery/res/values-in/arrays.xml
@@ -5,13 +5,13 @@
         <item>Feb</item>
         <item>Mar</item>
         <item>Apr</item>
-        <item>May</item>
+        <item>Mei</item>
         <item>Jun</item>
         <item>Jul</item>
-        <item>Aug</item>
+        <item>Agu</item>
         <item>Sep</item>
-        <item>Oct</item>
+        <item>Okt</item>
         <item>Nov</item>
-        <item>Dec</item>
+        <item>Des</item>
     </string-array>
 </resources>
