--- a/z-ml-overlay-connectivitysettings/res/values/plurals.xml
+++ b/z-ml-overlay-connectivitysettings/res/values/plurals.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="lockpassword_password_requires_letters">
-        <item quantity="other">Password must contain at least %d letters.</item>
-        <item quantity="one">Password must contain at least 1 letter.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d huruf.</item>
+        <item quantity="one">Kata sandi harus mengandung minimal 1 huruf.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_lowercase">
-        <item quantity="other">Password must contain at least %d lowercase letters.</item>
-        <item quantity="one">Password must contain at least 1 lowercase letter.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d huruf kecil.</item>
+        <item quantity="one">Kata sandi harus mengandung minimal 1 huruf kecil.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_nonletter">
-        <item quantity="other">Password must contain at least %d non-letter characters.</item>
-        <item quantity="one">Password must contain at least 1 non-letter character.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d karakter bukan huruf.</item>
+        <item quantity="one">Kata sandi harus berisi minimal 1 karakter bukan huruf.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_numeric">
-        <item quantity="other">Password must contain at least %d numerical digits.</item>
-        <item quantity="one">Password must contain at least 1 numerical digit.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d digit angka.</item>
+        <item quantity="one">Kata sandi harus berisi minimal 1 digit angka.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_symbols">
-        <item quantity="other">Password must contain at least %d special symbols.</item>
-        <item quantity="one">Password must contain at least 1 special symbol.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d simbol khusus.</item>
+        <item quantity="one">Kata sandi harus mengandung minimal 1 simbol khusus.</item>
     </plurals>
     <plurals name="lockpassword_password_requires_uppercase">
-        <item quantity="other">Password must contain at least %d uppercase letters.</item>
-        <item quantity="one">Password must contain at least 1 uppercase letter.</item>
+        <item quantity="other">Kata sandi harus mengandung setidaknya %d huruf besar.</item>
+        <item quantity="one">Kata sandi harus mengandung minimal 1 huruf besar.</item>
     </plurals>
     <plurals name="manage_condition_providers_summary_nonzero">
-        <item quantity="other">%d app provides conditions</item>
-        <item quantity="one">%d app provides conditions</item>
+        <item quantity="other">%d aplikasi menyediakan ketentuan</item>
+        <item quantity="one">%d aplikasi menyediakan ketentuan</item>
     </plurals>
     <plurals name="manage_notification_access_summary_nonzero">
-        <item quantity="other">%d app can read notifications</item>
-        <item quantity="one">%d app can read notifications</item>
+        <item quantity="other">%d aplikasi dapat membaca notifikasi</item>
+        <item quantity="one">%d aplikasi dapat membaca notifikasi</item>
     </plurals>
     <plurals name="mtrl_badge_content_description">
-        <item quantity="other">%d new notifications</item>
-        <item quantity="one">%d new notification</item>
+        <item quantity="other">%d notifikasi baru</item>
+        <item quantity="one">%d notifikasi baru</item>
     </plurals>
     <plurals name="mz_fp_management_count">
-        <item quantity="other">%1$d fingerprint(s) enrolled</item>
-        <item quantity="one">%1$d fingerprint(s) enrolled</item>
+        <item quantity="other">%1$d sidik jari(s) ditambahkan</item>
+        <item quantity="one">%1$d sidik jari(s) ditambahkan</item>
     </plurals>
     <plurals name="show_dev_countdown">
-        <item quantity="other">You are now %1$d step(s) away from being a developer.</item>
-        <item quantity="one">You are now %1$d step(s) away from being a developer.</item>
+        <item quantity="other">Kamu sekarang tinggal %1$d langkah(s) lagi untuk mengaktifkan mode pengembang.</item>
+        <item quantity="one">Kamu sekarang tinggal %1$d langkah(s) lagi untuk mengaktifkan mode pengembang.</item>
     </plurals>
     <plurals name="tether_manage_device_summary">
-        <item quantity="other">%d device(s) connected</item>
-        <item quantity="zero">%d device(s) connected</item>
-        <item quantity="one">%d device(s) connected</item>
+        <item quantity="other">%d perangkat(s) terhubung</item>
+        <item quantity="zero">%d perangkat(s) terhubung</item>
+        <item quantity="one">%d perangkat(s) terhubung</item>
     </plurals>
     <plurals name="wrong_pin_code">
-        <item quantity="other">Wrong SIM PIN, you have %1$d attempt(s) remained</item>
-        <item quantity="one">Wrong SIM PIN, you have %1$d attempt(s) before you need to contact your carrier for unlocking the phone</item>
+        <item quantity="other">PIN SIM salah, Anda masih memiliki %1$d upaya lagi</item>
+        <item quantity="one">PIN SIM salah, Anda memiliki %1$d upaya sebelum perlu menghubungi operator untuk membuka kunci ponsel</item>
     </plurals>
 </resources>
