fix systemui building

--- a/z-ml-overlay-systemui/res/values-in/arrays.xml
+++ b/z-ml-overlay-systemui/res/values-in/arrays.xml
@@ -644,7 +644,7 @@
         <item>Proxy Auto-Config</item>
     </string-array>
     <string-array name="wifi_signal">
-        <item Lemah</item>
+        <item>Lemah</item>
         <item>Sedang</item>
         <item>Baik</item>
         <item>Kuat</item>
