--- a/z-ml-overlay-flyme-mms/res/values-vi/plurals.xml
+++ b/z-ml-overlay-flyme-mms/res/values-vi/plurals.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="confirm_delete_conversation">
-        <item quantity="other">Delete %1$s conversation(s)</item>
-        <item quantity="one">Delete %1$s conversation(s)</item>
+        <item quantity="other">Xóa %1$s cuộc trò chuyện</item>
+        <item quantity="one">Xóa %1$s cuộc trò chuyện</item>
     </plurals>
     <plurals name="mtrl_badge_content_description">
-        <item quantity="other">%d new notifications</item>
-        <item quantity="one">%d new notification</item>
+        <item quantity="other">%d thông báo mới</item>
+        <item quantity="one">%d thông báo mới</item>
     </plurals>
     <plurals name="slide_duration">
         <item quantity="other">%s s</item>
